--- a/code/mars/.vscode/settings.json
+++ b/code/mars/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "python.analysis.extraPaths": [
     "./src"
-  ]
+  ],
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./test",
+    "-p",
+    "*_test.py"
+  ],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
