--- a/code/mars/.vscode/launch.json
+++ b/code/mars/.vscode/launch.json
@@ -6,14 +6,14 @@
   "configurations": [
     {
       "name": "Python: Attach",
-      "type": "python",
+      "type": "debugpy",
       "request": "attach",
       "port": 5678,
       "host": "localhost"
     },
     {
       "name": "Python: Current File",
-      "type": "python",
+      "type": "debugpy",
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal"
