--- a/code/mars/.vscode/settings.json
+++ b/code/mars/.vscode/settings.json
@@ -9,6 +9,6 @@
     "-p",
     "*_test.py"
   ],
-  "python.testing.pytestEnabled": false,
+  "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": true
 }
